# bite-timing-robot

./: CMakeLists.txt  README.md  package.xml
launch/: bite_trigger.launch  gaze_proc.launch  play_sound.launch  social_dining_study.launch
msg/: GazeData.msg  Orientation.msg  Person.msg
scripts/: bite_trigger.py  ipaznet.py  ml_models.py  openpose_processor.py  play_sound_node.py  ros_openpose_synchronous.py  rt_gene_processor.py  rt_gene_synchronous.py  visualizer.py
scripts/models/: data_utils.py  interleaved_net.py  ml_models.py  tcn_model.py
srv/: CheckBiteTiming.srv  MouthOpen.srv  Toggle.srv
