<?xml version="1.0"?>
<package format="2">
  <name>bite_timing_robot</name>
  <version>0.0.1</version>
  <description>Produces various types of bite timing triggers for assistive robot feeding</description>

  <!-- The maintainer tag -->
  <maintainer email="abrar.anwar@usc.edu">Abrar Anwar</maintainer>
  <author email="abrar.anwar@usc.edu">Abrar Anwar</author>

  <!-- The license tag -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <export>
  </export>
</package>
